--- a/templates/skill.html
+++ b/templates/skill.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ㄚㄩ山乇卄-Home</title>
+    <title>ㄚㄩ山乇卄-Projects</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/image-fade.css">
     <link rel="icon" type="image/x-icon" href="../assets/images/download (1).png">
@@ -11,7 +11,7 @@
 <body class="dark-mode">
     <div class="header">
         <div class="left-header">
-          <a href="../templates/index.html"><h2>ㄚㄩ山乇卄</h2></a>
+            <a href="../templates/index.html"><h2>ㄚㄩ山乇卄</h2></a>
             <nav id="nav">
                 <ul>
                     <li><a href="../templates/index.html">Home</a></li>
@@ -23,7 +23,7 @@
         </div>
         <div class="right-header">
             <div class="mode">
-                <label class="switch" >
+                <label class="switch">
                     <input type="checkbox" id="mode" onchange="changeMode()">
                     <span class="slider">
                       <span class="circle">
@@ -40,7 +40,8 @@
                           </g>
                           <defs>
                             <clipPath id="clip0_68_17">
-                              <rect fill="currentColor" height="512" width="512"></rect>
+                              <rect fill="cur
+                            </label>rentColor" height="512" width="512"></rect>
                             </clipPath>
                           </defs>
                         </svg>
@@ -51,32 +52,10 @@
             <button><a href="../templates/contact.html">Contact me</a></button>
         </div>
     </div>
-    <div id="home" class="tab display">
-        <div class="profile">
-          <div class="prof-pic">
-            <img class="" src="../assets/images/yuweh-removebg-preview.png" alt="Profile" class="loader ">
-          </div>
-          <div class="title">
-            <h1>
-              <h2 class="typewrite" data-period="2000" data-type='[ "Hi, I&apos;m Don Ar Ambrocio.", "I am a Backend Developer." , "From Santa Rosa City, Laguna Philippines." ]'>
-                <span class="wrap"></span>
-              </h2>
-            </h1>
-          </div>
+    <div id="skill" class="tab display">
+        <div id="">
+            <h1>Skills</h1>
         </div>
-        <div class="about-me">
-          <div>
-            <p>{Software Developer}</p>
-            <p>I seek to develop into a highly successful information technology specialist by applying my technical expertise to advance the firm's performance as well as my own professional and personal development.</p>
-            <p>"I am open to changes, easy to work and fun to be with, so let's have a blast together."</p>
-          </div>
-        </div>
-    </div>
-    <div id="about-me" class="tab hide">
-        <h1>About me</h1>
-    </div>
-    <div id="project" class="tab hide">
-        <h1>Projects</h1>
     </div>
     <div class="soc-med">
       <svg width="32px" height="32px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffffff" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>linkedin [#ffffff]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-180.000000, -7479.000000)" fill="#ffffff"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M144,7339 L140,7339 L140,7332.001 C140,7330.081 139.153,7329.01 137.634,7329.01 C135.981,7329.01 135,7330.126 135,7332.001 L135,7339 L131,7339 L131,7326 L135,7326 L135,7327.462 C135,7327.462 136.255,7325.26 139.083,7325.26 C141.912,7325.26 144,7326.986 144,7330.558 L144,7339 L144,7339 Z M126.442,7323.921 C125.093,7323.921 124,7322.819 124,7321.46 C124,7320.102 125.093,7319 126.442,7319 C127.79,7319 128.883,7320.102 128.883,7321.46 C128.884,7322.819 127.79,7323.921 126.442,7323.921 L126.442,7323.921 Z M124,7339 L129,7339 L129,7326 L124,7326 L124,7339 Z" id="linkedin-[#ffffff]"> </path> </g> </g> </g> </g></svg>
